# midi-parse

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  midi.h
include/MIDI/: keyboard.h  keyboard.hpp  midi.h  midi.hpp  track.h  track.hpp  utils.h  utils.hpp
src/: CMakeLists.txt  keyboard.cpp  midi.cpp  track.cpp  utils.cpp
tests/: CMakeLists.txt  test.cpp  test_midi.cpp  test_utils.cpp  testmidi.cpp  testutil.cpp
tests/descriptions/: test_vl_overview.txt
tests/in/: PPQN.mid
